# soccerwindow2

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.qt  Doxyfile.in  Makefile.am  NEWS  NEWS.en  README  README.en  README.md  cmake-config.h.in  configure.ac  reconfig.sh  soccerwindow2.pro  soccerwindow2.spec.in
cmake/: FindLibrcsc.cmake
src/: CMakeLists.txt  Makefile.am  soccerwindow2.in  src.pro  sswindow2.in
src/model/: CMakeLists.txt  Makefile.am  action_sequence_description.cpp  action_sequence_description.h  action_sequence_log_parser.cpp  action_sequence_log_parser.h  agent_data_holder.h  agent_id.h  chain_action_data.cpp  chain_action_data.h  chain_action_log_parser.cpp  chain_action_log_parser.h  csv_logger.cpp  csv_logger.h  debug_client_parser.cpp  debug_client_parser.h  debug_log_data.cpp  debug_log_data.h  debug_log_holder.cpp  debug_log_holder.h  debug_view_data.cpp  debug_view_data.h  draw_data_handler.h  draw_data_holder.cpp  draw_data_holder.h  draw_data_parser.cpp  draw_data_parser.h  draw_types.h  features_log.cpp  features_log.h  features_log_parser.cpp  features_log_parser.h  field_evaluator_message_parser.cpp  field_evaluator_message_parser.h  formation_edit_data.cpp  formation_edit_data.h  game_event.h  game_event_holder.cpp  game_event_holder.h  game_event_log_parser.cpp  (+17 more)
src/qt/: CMakeLists.txt  Makefile.am  action_sequence_option_window.h  action_sequence_selector.cpp  action_sequence_tree_view.cpp  action_sequence_tree_view.h  ball_painter_rcss.h  ball_trace_painter.cpp  ball_trace_painter.h  color_setting_dialog.cpp  color_setting_dialog.h  coordinate_delegate.cpp  debug_log_dir_dialog.cpp  debug_log_dir_dialog.h  debug_log_painter.cpp  debug_log_painter.h  debug_message_window.cpp  debug_message_window.h  debug_painter.cpp  debug_server.cpp  debug_server.h  detail_dialog.cpp  detail_dialog.h  dir_selector.cpp  dir_selector.h  draw_config.cpp  draw_config.h  draw_data_painter.cpp  draw_data_painter.h  features_log_painter.cpp  features_log_painter.h  field_canvas.cpp  field_canvas.h  field_evaluation_painter.cpp  field_painter.cpp  field_painter.h  font_setting_dialog.cpp  font_setting_dialog.h  formation_data_view.cpp  formation_data_view.h  (+47 more)
src/qt/obsolete/: evaluator_control_panel.cpp
src/qt4/: Makefile.am  action_sequence_option_window.cpp  action_sequence_option_window.h  action_sequence_selector.cpp  action_sequence_selector.h  action_sequence_tree_view.cpp  action_sequence_tree_view.h  ball_painter.cpp  ball_painter.h  ball_painter_rcss.cpp  ball_trace_painter.cpp  ball_trace_painter.h  chain_selector.cpp  chain_selector.h  color_setting_dialog.cpp  color_setting_dialog.h  debug_log_dir_dialog.cpp  debug_log_painter.cpp  debug_log_painter.h  debug_message_window.cpp  debug_message_window.h  debug_painter.cpp  debug_painter.h  detail_dialog.cpp  dir_selector.cpp  draw_config.cpp  draw_config.h  evaluation_window.cpp  evaluation_window.h  evaluator_control_panel.cpp  evaluator_control_panel.h  field_canvas.cpp  field_canvas.h  field_evaluation_painter.cpp  field_evaluation_painter.h  field_painter.cpp  font_setting_dialog.cpp  font_setting_dialog.h  image_save_dialog.cpp  launcher_dialog.cpp  (+31 more)
xpm/: canvas_enlarge.xpm  canvas_player_number.xpm  canvas_player_type.xpm  clear.xpm  data_auto_select.xpm  debug_log_view.xpm  debug_server_switch.xpm  debug_view_all.xpm  debug_view_ball.xpm  debug_view_comment.xpm  debug_view_line.xpm  debug_view_message.xpm  debug_view_opponent.xpm  debug_view_player.xpm  debug_view_self.xpm  debug_view_target.xpm  debug_view_teammate.xpm  float.xpm  left.xpm  logplayer_accelerate.xpm  logplayer_decelerate.xpm  logplayer_go_first.xpm  logplayer_go_last.xpm  logplayer_go_next_score.xpm  logplayer_go_prev_score.xpm  logplayer_live_mode.xpm  logplayer_one_step_back.xpm  logplayer_one_step_forward.xpm  logplayer_play_back.xpm  logplayer_play_forward.xpm  logplayer_play_or_stop.xpm  logplayer_shift_down.xpm  logplayer_shift_up.xpm  logplayer_slider.xpm  logplayer_stop.xpm  monitor_connect.xpm  monitor_discard_player.xpm  monitor_disconnect.xpm  monitor_kickoff.xpm  monitor_move_player.xpm  (+40 more)
