## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = \
	libsoccerwindow2_model.a

libsoccerwindow2_model_a_SOURCES = \
	action_sequence_description.cpp \
	action_sequence_log_parser.cpp \
	debug_client_parser.cpp \
	debug_log_data.cpp \
	debug_log_holder.cpp \
	debug_view_data.cpp \
	draw_data_holder.cpp \
	draw_data_parser.cpp \
	field_evaluator_message_parser.cpp \
	game_event_holder.cpp \
	game_event_log_parser.cpp \
	grid_field_evaluation_data.cpp \
	main_data.cpp \
	monitor_view_data.cpp \
	options.cpp \
	trainer_data.cpp \
	view_holder.cpp

noinst_HEADERS = \
	agent_data_holder.h \
	action_sequence_description.h \
	action_sequence_log_parser.h \
	debug_client_parser.h \
	debug_log_data.h \
	debug_log_holder.h \
	debug_view_data.h \
	draw_data_holder.h \
	draw_data_parser.h \
	field_evaluator_message_parser.h \
	game_event.h \
	game_event_holder.h \
	game_event_log_parser.h \
	grid_field_evaluation_data.h \
	main_data.h \
	monitor_view_data.h \
	options.h \
	point.h \
	trainer_data.h \
	view_holder.h

libsoccerwindow2_model_a_CPPFLAGS =
libsoccerwindow2_model_a_CFLAGS = -Wall -W
libsoccerwindow2_model_a_CXXFLAGS = -Wall -W
#libsoccerwindow2_model_a_LDFLAGS =

AM_CPPFLAGS =
AM_CFLAGS = -Wall -W
AM_CXXFLAGS = -Wall -W
AM_LDFLAGS =
##AM_LDADD =

EXTRA_DIST = model.pro

CLEANFILES = *~
